# gitbench

./: .gitbench.json  .gitignore  BLOG_DRAFT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  temp.json
.playwright-mcp/: page-2026-04-28T22-26-10-513Z.yml  page-2026-04-28T22-34-19-337Z.yml  page-2026-04-28T22-47-44-013Z.yml  page-2026-04-28T22-50-31-085Z.yml
docs/: audit-web-widths.md  benchmark-fixture-assessment.md  campaign-rollout.md  fixture-calibration-audit.md  report-artifact-contract.md  web-report-monorepo-handoff.md
docs/adr/: 0001-benchmark-abc-location.md  0002-fixture-loading-defaults.md  0008-verbose-progress-callback.md
docs/agents/: domain.md  provider-logos.md
gitbench/: __init__.py  cli.py  config.py  export.py  fixture_audit.py  fixture_self_check.py  fixture_structured_validator.py  render.py  report_contract.py  result_doctoring.py  result_safety.py  scorer_capabilities.py  structured_output.py  version.py
gitbench.egg-info/: PKG-INFO  SOURCES.txt
tests/: gitbench_judge_test.json  test_aggregation.py  test_benchmarks.py  test_campaign.py  test_campaign_e2e.py  test_campaign_orchestrator.py  test_campaign_runner.py  test_campaign_scoring.py  test_campaign_store.py  test_capabilities.py  test_capacity.py  test_cli.py  test_config.py  test_export.py  test_fixture_self_check.py  test_git.py  test_import_legacy.py  test_integration.py  test_judge.py  test_model.py  test_parallel_fixtures.py  test_reasoning.py  test_render.py  test_report_artifact_contract.py  test_result_doctoring.py  test_result_safety.py  test_result_safety_cli.py  test_runner_classification.py  test_runner_dispatch.py  test_scheduler.py  test_scorer.py  test_structured_output.py  test_types.py  test_version.py
tools/: replay_single_file_conflict_scoring.py
web/: .gitignore  README.md  astro.config.mjs  package.json
(+1036 files in other folders)
